# rekordbox-mcp

./: .gitignore  CLAUDE.md  README.md  export_genre_to_zip.py  glama.json  inspect-playlists.py  inspect-schema.py  inspect-smart-playlists.py  package-lock.json  package.json  pyproject.toml  run-server.sh  test-keep-playlist.py  test-mapping.py  test-playlist-implementation.py  test-playlist-songs.py  test-playlists.py  test-smart-playlist-flags.py  test-specific-playlist.py
rekordbox_mcp/: __init__.py  database.py  models.py  server.py
src/: index.ts  types.ts  xml-parser.ts
src/__tests__/: rekordbox-service.test.ts  xml-parser.test.ts
tests/: conftest.py  test_caching.py  test_database.py  test_models.py  test_server.py
typescript/: README.md
typescript/src/: rekordbox-service.ts
typescript/src/__tests__/: integration.test.ts  test-data.ts  types.test.ts
