[project]
name = "rekordbox-mcp"
version = "1.0.0"
description = "MCP server for rekordbox database management with real-time database access"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Dave Henke", email = "davehenke@users.noreply.github.com" },
]
keywords = ["mcp", "rekordbox", "dj", "music", "database", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "fastmcp>=2.11.0",
    "pyrekordbox>=0.4.3",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/davehenke/rekordbox-mcp"
Repository = "https://github.com/davehenke/rekordbox-mcp"
Issues = "https://github.com/davehenke/rekordbox-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
rekordbox-mcp = "rekordbox_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rekordbox_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
